[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Xolonium-pn4D.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="Control/VBoxContainer"]
margin_right = 800.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighscoreLabel" type="Label" parent="Control/VBoxContainer"]
margin_top = 82.0
margin_right = 800.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 1 )
text = "Best: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="Control"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -39.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Astespacio"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LicenseButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -134.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "License"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -84.0
margin_right = -100.0
custom_constants/separation = 100
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Control/HBoxContainer"]
margin_right = 250.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Control/HBoxContainer"]
margin_left = 350.0
margin_right = 600.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Control/LicenseButton" to="." method="_on_LicenseButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
